--- a/src/lose.html
+++ b/src/lose.html
@@ -6,18 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
+    <title>Lose</title>
+</head>
+<body>
+    <header>
+        <div>
+            <h1>You lose!!</h1>
+        </div>
+    </header>
+    <main>
+        <div>
+            <button onclick="playBtn(this)">Play</button>
+        </div>
+    </main>
+    <footer>
+        <div>
+            <h2 class="company_title">CHUPSgames</h2>
+        </div>
+    </footer>
+    <script>
+        "use strict";
+        function playBtn(btn) {
+            document.location.href = "./game.html"
+        }
+    </script>
     <style>
+        footer {
+            border-top: 1px solid yellow;
+            width: 100%;
+            height: 130px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            bottom: 0px;
+        }
+        .company_title {
+            color: white;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 50px;
+        }
+        button {
+            display: block;
+            margin: 0 auto;
+            color: white;
+            font-size: 42px;
+            width: 80%;
+            height: 60px;
+            background: none;
+            border: 1px solid yellow;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border-radius: 4px;
+        }
+        button:hover {
+            box-shadow: 5px 5px rgb(182, 182, 0);
+            width: 80.5%;
+            height: 65px;
+            cursor: pointer;
+            transition: 1s all;
+        }
         * {
             padding: 0px;
             margin: 0px;
         }
-        canvas {
+        header {
             width: 100%;
-            height: 100%;
+            height: 130px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: none;
+            border-bottom: 1px solid yellow;
+        }
+        h1 {
+            font-size: 50px;
+            color: red;
+            font-family: cursive;
+        }
+        body {
+            background: black;
         }
     </style>
-    <title>You lose!!</title>
-</head>
-<body>
 </body>
 </html>
