--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div>
-            <h1>NFS.IO</h1>
+            <h1>FORZA HORIZON 6</h1>
         </div>
     </header>
     <main>
